[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gc2d = { git = "https://github.com/GCast31/gc2d.git", version = "*" }
gc2d_games = { git = "https://github.com/GCast31/gc2d_games.git", version = "0.1.0" }
rand = "0.8.5"
